Bổ sung về hoàn cọc về ví